Update copyright notice and add favicon.

--- a/css/main.scss
+++ b/css/main.scss
@@ -3,3 +3,11 @@
   padding: 1em;
   max-height: 250px;
 }
+
+.copyright {
+  text-align: center;
+  font-size: small;
+  line-height: 2.5em;
+  color: white;
+  opacity: 0.5;
+}
