--- a/css/main.scss
+++ b/css/main.scss
@@ -11,3 +11,10 @@
   color: white;
   opacity: 0.5;
 }
+
+blockquote {
+  border-left: 5px solid #ddd;
+  padding-left: 1em;
+  margin-left: 0;
+}
+ 
